full rebrand. switched from canvasmc to folia.